pdaw/py-target/PdawParser.py
# Generated from Pdaw.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PdawParser ( Parser ):

    grammarFileName = "Pdaw.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'..'", "'@'", "'='", 
                     "'['", "','", "']'", "'.'", "'('", "')'", "':'", "'*'", 
                     "'/'", "'*~'", "'/~'", "'+'", "'-'", "'+~'", "'-~'", 
                     "'%'", "'=='", "'!='", "'>='", "'<'", "'<='", "'in range'", 
                     "'patch'", "'func'", "'block'", "'return'", "'>'", 
                     "'end'", "'if'", "'elif'", "'else'", "'for'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "PATCH", "FUNC", "BLOCK", "RETURN", "CONNECT", 
                      "END", "IF", "ELIF", "ELSE", "FOR", "VARTYPE", "IOLET", 
                      "NAME", "VARNAME", "SYMBOL", "NUMBER", "INTEGER", 
                      "FLOAT", "NL", "WS", "COMMENT" ]

    RULE_prog = 0
    RULE_patchstmt = 1
    RULE_funcdefstmt = 2
    RULE_returnstmt = 3
    RULE_stmt = 4
    RULE_blockstmt = 5
    RULE_dotdotstmt = 6
    RULE_callstmt = 7
    RULE_nodedeclstmt = 8
    RULE_simpledeclstmt = 9
    RULE_list = 10
    RULE_listelem = 11
    RULE_slicedlist = 12
    RULE_connectionstmt = 13
    RULE_connectionelem = 14
    RULE_singlenode = 15
    RULE_parameters = 16
    RULE_typedparams = 17
    RULE_argslist = 18
    RULE_typedargslist = 19
    RULE_arg = 20
    RULE_typedarg = 21
    RULE_suite = 22
    RULE_operation = 23
    RULE_ifstmt = 24
    RULE_expr = 25
    RULE_forstmt = 26
    RULE_varname = 27

    ruleNames =  [ "prog", "patchstmt", "funcdefstmt", "returnstmt", "stmt", 
                   "blockstmt", "dotdotstmt", "callstmt", "nodedeclstmt", 
                   "simpledeclstmt", "list", "listelem", "slicedlist", "connectionstmt", 
                   "connectionelem", "singlenode", "parameters", "typedparams", 
                   "argslist", "typedargslist", "arg", "typedarg", "suite", 
                   "operation", "ifstmt", "expr", "forstmt", "varname" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    PATCH=29
    FUNC=30
    BLOCK=31
    RETURN=32
    CONNECT=33
    END=34
    IF=35
    ELIF=36
    ELSE=37
    FOR=38
    VARTYPE=39
    IOLET=40
    NAME=41
    VARNAME=42
    SYMBOL=43
    NUMBER=44
    INTEGER=45
    FLOAT=46
    NL=47
    WS=48
    COMMENT=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def patchstmt(self):
            return self.getTypedRuleContext(PdawParser.PatchstmtContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(PdawParser.NL)
            else:
                return self.getToken(PdawParser.NL, i)

        def funcdefstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdawParser.FuncdefstmtContext)
            else:
                return self.getTypedRuleContext(PdawParser.FuncdefstmtContext,i)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdawParser.StmtContext)
            else:
                return self.getTypedRuleContext(PdawParser.StmtContext,i)


        def getRuleIndex(self):
            return PdawParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = PdawParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.patchstmt()
            self.state = 60
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 57
                    self.match(PdawParser.NL) 
                self.state = 62
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 65
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [30]:
                        self.state = 63
                        self.funcdefstmt()
                        pass
                    elif token in [47]:
                        self.state = 64
                        self.match(PdawParser.NL)
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3f) == 0 and ((1 << _la) & 147645951623328) != 0:
                self.state = 70
                self.stmt()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(PdawParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatchstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PATCH(self):
            return self.getToken(PdawParser.PATCH, 0)

        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)

        def NL(self):
            return self.getToken(PdawParser.NL, 0)

        def getRuleIndex(self):
            return PdawParser.RULE_patchstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPatchstmt" ):
                listener.enterPatchstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPatchstmt" ):
                listener.exitPatchstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPatchstmt" ):
                return visitor.visitPatchstmt(self)
            else:
                return visitor.visitChildren(self)




    def patchstmt(self):

        localctx = PdawParser.PatchstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_patchstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(PdawParser.PATCH)
            self.state = 79
            self.match(PdawParser.NAME)
            self.state = 80
            self.match(PdawParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdefstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(PdawParser.FUNC, 0)

        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)

        def typedparams(self):
            return self.getTypedRuleContext(PdawParser.TypedparamsContext,0)


        def suite(self):
            return self.getTypedRuleContext(PdawParser.SuiteContext,0)


        def returnstmt(self):
            return self.getTypedRuleContext(PdawParser.ReturnstmtContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(PdawParser.NL)
            else:
                return self.getToken(PdawParser.NL, i)

        def getRuleIndex(self):
            return PdawParser.RULE_funcdefstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncdefstmt" ):
                listener.enterFuncdefstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncdefstmt" ):
                listener.exitFuncdefstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdefstmt" ):
                return visitor.visitFuncdefstmt(self)
            else:
                return visitor.visitChildren(self)




    def funcdefstmt(self):

        localctx = PdawParser.FuncdefstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcdefstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(PdawParser.FUNC)
            self.state = 83
            self.match(PdawParser.NAME)
            self.state = 84
            self.typedparams()
            self.state = 85
            self.match(PdawParser.T__1)
            self.state = 86
            self.suite()
            self.state = 87
            self.returnstmt()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==47:
                self.state = 88
                self.match(PdawParser.NL)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(PdawParser.T__2)
            self.state = 95
            self.match(PdawParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(PdawParser.RETURN, 0)

        def NL(self):
            return self.getToken(PdawParser.NL, 0)

        def varname(self):
            return self.getTypedRuleContext(PdawParser.VarnameContext,0)


        def getRuleIndex(self):
            return PdawParser.RULE_returnstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnstmt" ):
                listener.enterReturnstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnstmt" ):
                listener.exitReturnstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnstmt" ):
                return visitor.visitReturnstmt(self)
            else:
                return visitor.visitChildren(self)




    def returnstmt(self):

        localctx = PdawParser.ReturnstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_returnstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(PdawParser.RETURN)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==42:
                self.state = 98
                self.varname()


            self.state = 101
            self.match(PdawParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockstmt(self):
            return self.getTypedRuleContext(PdawParser.BlockstmtContext,0)


        def NL(self):
            return self.getToken(PdawParser.NL, 0)

        def connectionstmt(self):
            return self.getTypedRuleContext(PdawParser.ConnectionstmtContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(PdawParser.CallstmtContext,0)


        def nodedeclstmt(self):
            return self.getTypedRuleContext(PdawParser.NodedeclstmtContext,0)


        def simpledeclstmt(self):
            return self.getTypedRuleContext(PdawParser.SimpledeclstmtContext,0)


        def ifstmt(self):
            return self.getTypedRuleContext(PdawParser.IfstmtContext,0)


        def forstmt(self):
            return self.getTypedRuleContext(PdawParser.ForstmtContext,0)


        def getRuleIndex(self):
            return PdawParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = PdawParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.blockstmt()
                self.state = 104
                self.match(PdawParser.NL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.connectionstmt()
                self.state = 107
                self.match(PdawParser.NL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 109
                self.callstmt()
                self.state = 110
                self.match(PdawParser.NL)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 112
                self.nodedeclstmt()
                self.state = 113
                self.match(PdawParser.NL)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 115
                self.simpledeclstmt()
                self.state = 116
                self.match(PdawParser.NL)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 118
                self.ifstmt()
                self.state = 119
                self.match(PdawParser.NL)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 121
                self.forstmt()
                self.state = 122
                self.match(PdawParser.NL)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 124
                self.match(PdawParser.NL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BLOCK(self):
            return self.getToken(PdawParser.BLOCK, 0)

        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)

        def typedparams(self):
            return self.getTypedRuleContext(PdawParser.TypedparamsContext,0)


        def suite(self):
            return self.getTypedRuleContext(PdawParser.SuiteContext,0)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(PdawParser.NL)
            else:
                return self.getToken(PdawParser.NL, i)

        def dotdotstmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PdawParser.DotdotstmtContext)
            else:
                return self.getTypedRuleContext(PdawParser.DotdotstmtContext,i)


        def getRuleIndex(self):
            return PdawParser.RULE_blockstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockstmt" ):
                listener.enterBlockstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockstmt" ):
                listener.exitBlockstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockstmt" ):
                return visitor.visitBlockstmt(self)
            else:
                return visitor.visitChildren(self)




    def blockstmt(self):

        localctx = PdawParser.BlockstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_blockstmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(PdawParser.BLOCK)
            self.state = 128
            self.match(PdawParser.NAME)
            self.state = 129
            self.typedparams()
            self.state = 130
            self.match(PdawParser.T__1)
            self.state = 131
            self.suite()
            self.state = 135
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 132
                    self.match(PdawParser.NL) 
                self.state = 137
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 138
                self.dotdotstmt()
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==47:
                self.state = 144
                self.match(PdawParser.NL)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(PdawParser.T__2)
            self.state = 151
            self.match(PdawParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DotdotstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(PdawParser.NL, 0)

        def connectionstmt(self):
            return self.getTypedRuleContext(PdawParser.ConnectionstmtContext,0)


        def nodedeclstmt(self):
            return self.getTypedRuleContext(PdawParser.NodedeclstmtContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(PdawParser.CallstmtContext,0)


        def getRuleIndex(self):
            return PdawParser.RULE_dotdotstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDotdotstmt" ):
                listener.enterDotdotstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDotdotstmt" ):
                listener.exitDotdotstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDotdotstmt" ):
                return visitor.visitDotdotstmt(self)
            else:
                return visitor.visitChildren(self)




    def dotdotstmt(self):

        localctx = PdawParser.DotdotstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dotdotstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(PdawParser.T__3)
            self.state = 157
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 154
                self.connectionstmt()
                pass

            elif la_ == 2:
                self.state = 155
                self.nodedeclstmt()
                pass

            elif la_ == 3:
                self.state = 156
                self.callstmt()
                pass


            self.state = 159
            self.match(PdawParser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)

        def parameters(self):
            return self.getTypedRuleContext(PdawParser.ParametersContext,0)


        def getRuleIndex(self):
            return PdawParser.RULE_callstmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallstmt" ):
                listener.enterCallstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallstmt" ):
                listener.exitCallstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallstmt" ):
                return visitor.visitCallstmt(self)
            else:
                return visitor.visitChildren(self)




    def callstmt(self):

        localctx = PdawParser.CallstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_callstmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.match(PdawParser.T__4)
            self.state = 162
            self.match(PdawParser.NAME)
            self.state = 163
            self.parameters()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NodedeclstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PdawParser.RULE_nodedeclstmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Nodedecl3Context(NodedeclstmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdawParser.NodedeclstmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operation(self):
            return self.getTypedRuleContext(PdawParser.OperationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodedecl3" ):
                listener.enterNodedecl3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodedecl3" ):
                listener.exitNodedecl3(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodedecl3" ):
                return visitor.visitNodedecl3(self)
            else:
                return visitor.visitChildren(self)


    class Nodedecl2Context(NodedeclstmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdawParser.NodedeclstmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)
        def parameters(self):
            return self.getTypedRuleContext(PdawParser.ParametersContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodedecl2" ):
                listener.enterNodedecl2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodedecl2" ):
                listener.exitNodedecl2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodedecl2" ):
                return visitor.visitNodedecl2(self)
            else:
                return visitor.visitChildren(self)


    class Nodedecl1Context(NodedeclstmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdawParser.NodedeclstmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varname(self):
            return self.getTypedRuleContext(PdawParser.VarnameContext,0)

        def NAME(self):
            return self.getToken(PdawParser.NAME, 0)
        def parameters(self):
            return self.getTypedRuleContext(PdawParser.ParametersContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodedecl1" ):
                listener.enterNodedecl1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodedecl1" ):
                listener.exitNodedecl1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodedecl1" ):
                return visitor.visitNodedecl1(self)
            else:
                return visitor.visitChildren(self)


    class Nodedecl4Context(NodedeclstmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PdawParser.NodedeclstmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varname(self):
            return self.getTypedRuleContext(PdawParser.VarnameContext,0)

        def operation(self):
            return self.getTypedRuleContext(PdawParser.OperationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNodedecl4" ):
                listener.enterNodedecl4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNodedecl4" ):
                listener.exitNodedecl4(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNodedecl4" ):
                return visitor.visitNodedecl4(self)
            else:
                return visitor.visitChildren(self)



    def nodedeclstmt(self):

        localctx = PdawParser.NodedeclstmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_nodedeclstmt)
        self._la = 0 # Token type
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                localctx = PdawParser.Nodedecl1Context(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.varname()
                self.state = 166
                self.match(PdawParser.T__5)
                self.state = 167
                self.match(PdawParser.NAME)
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11:
                    self.state = 168
                    self.parameters()


                pass

            elif la_ == 2:
                localctx = PdawParser.Nodedecl2Context(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.match(PdawParser.NAME)
                self.state = 173
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==11:
                    self.state = 172
                    self.parameters()


                pass

            elif la_ == 3:
                localctx = PdawParser.Nodedecl3Context(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 175
                self.operation()
                pass

            elif la_ == 4:
                localctx = PdawParser.Nodedecl4Context(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 176
                self.varname()
                self.state = 177
                self.match(PdawParser.T__5)
                self.state = 178
                self.operation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpledeclstmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varname(self):
            return self.getTypedRuleContext(PdawParser.VarnameContext,0)


        def SYMBOL(self):
            return self.getToken(PdawParser.SYMBOL, 0)

        def NUMBER(self):
            return self.getToken(PdawParser.NUMBER, 0)

        def list_(self):
            return self.getTypedRuleContext(PdawParser.ListContext,0)


        def slicedlist(self):
            return self.getTypedRuleContext(PdawParser.SlicedlistContext,0)


        def callstmt(self):
            return self.getTypedRuleContext(PdawParser.CallstmtContext,0)

